--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "5.0.0-alpha.91",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.414.0",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@mswjs/http-middleware": "^0.10.1",
     "@storybook/addon-essentials": "^8.2.5",
     "@storybook/addon-interactions": "^8.2.5",
     "@storybook/addon-links": "^8.2.5",
@@ -33,16 +36,21 @@
     "@storybook/nextjs": "^8.2.5",
     "@storybook/react": "^8.2.5",
     "@storybook/test": "^8.2.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cors": "^2.8.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unicorn": "^54.0.0",
+    "express": "^4.19.2",
     "husky": "^9.1.1",
     "lint-staged": "^15.2.7",
+    "msw": "^2.3.4",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "storybook": "^8.2.5",
@@ -65,5 +73,10 @@
   "packageManager": "pnpm@9.5.0",
   "engines": {
     "node": ">=18"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
