--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unicorn": "^54.0.0",
     "express": "^4.19.2",
+    "html-to-image": "^1.11.11",
     "husky": "^9.1.1",
     "lint-staged": "^15.2.7",
     "msw": "^2.3.4",
