--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/sdcn/components",
-    "utils": "@/sdcn/lib/utils"
+    "components": "@/shared/ui",
+    "utils": "@/shared/lib/utils"
   }
 }
