--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "5.0.0-alpha.91",
