--- a/.github/workflows/push-image-to-dev.yml
+++ b/.github/workflows/push-image-to-dev.yml
@@ -54,12 +54,12 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      
+
       - name: Build with Create React App
         run: pnpm install
 
       - name: Build with Create React App
-        run: pnpm build
+        run: pnpm build:newdev
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
