--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start-dev": "next dev",
-    "build": "cp .env.dev .env && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
@@ -59,6 +59,7 @@
     "msw": "^2.3.4",
     "postcss": "^8",
     "prettier": "^3.3.3",
+    "react-loading-skeleton": "^3.4.0",
     "storybook": "^8.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.1",
