--- a/package.json
+++ b/package.json
@@ -3,14 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "start-dev": "cp .env.development .env && next dev",
-    "start-stg": "cp .env.staging .env && next dev",
-    "start-prod": "cp .env.production .env && next dev",
-    "build": "next build",
-    "build:newdev": "cp .env.development .env && next build",
-    "build:staging": "cp .env.staging .env && next build",
-    "build:production": "cp .env.production .env && next build",
+    "start-dev": "next dev",
+    "build:newdev": "cp .env.dev .env && next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
