etc: update package.json scripts

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start-dev": "next dev",
-    "build:newdev": "cp .env.dev .env && next build",
+    "dev": "next dev",
+    "start-dev": "cp .env.newdev .env.development && next dev",
+    "start-stg": "cp .env.stg .env.development && next dev",
+    "build": "next build",
+    "build:newdev": "cp .env.newdev .env.production && next build",
+    "build:stg": "cp .env.stg .env.production && next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
