--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,21 @@
   "singleQuote": true,
   "printWidth": 80,
   "bracketSpacing": true,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "^react",
+    "^next",
+    "^@/app/(.*)$",
+    "^@/views/(.*)$",
+    "^@/widgets/(.*)$",
+    "^@/features/(.*)$",
+    "^@/entities/(.*)$",
+    "^@/shared/(.*)$",
+    "^/public/",
+    "<THIRD_PARTY_MODULES>",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
