--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/react": "^8.2.5",
     "@storybook/test": "^8.2.5",
     "@svgr/webpack": "^8.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
