--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.414.0",
+    "mixpanel-browser": "^2.55.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -51,6 +52,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mixpanel-browser": "^2.50.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
