--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@sentry/nextjs": "^8",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "5.0.0-alpha.91",
     "axios": "^1.7.2",
