--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -54,18 +54,27 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
 
       - name: Debug
-        run: echo NEXT_PUBLIC_API_URL
-        with:
+        run: echo NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+        env:
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
 
       - name: Generate Environment Variables File for Production
         run: echo "NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL" >> .env.production
-        with:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-
-      - name: Generate Environment Variables File for Production 22
         env:
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+
+      - name: Check .env.production file
+        run: |
+          if [ -f .env.production ]; then
+            echo ".env.production file exists"
+            if grep -q "NEXT_PUBLIC_API_URL=" .env.production; then
+              echo "NEXT_PUBLIC_API_URL is present in .env.production"
+            else
+              echo "NEXT_PUBLIC_API_URL is missing from .env.production"
+            fi
+          else
+            echo ".env.production file does not exist"
+          fi
 
       - name: Build with Create React App
         run: pnpm install
