--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@sentry/nextjs": "^8",
     "@tanstack/react-query": "^5.51.11",
-    "@tanstack/react-query-devtools": "5.0.0-alpha.91",
+    "@tanstack/react-query-devtools": "^5.51.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
