--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-unicorn": "^54.0.0",
     "express": "^4.19.2",
     "html-to-image": "^1.11.11",
