--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:production": "cp .env.prod .env.production && next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
