--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Build with Create React App
         run: pnpm build
         env:
+          NEXT_PUBLIC_ENVIRONMENT: production
           NEXT_PUBLIC_API_GOOGLE_IMAGE_HOST_NAME: ${{ secrets.NEXT_PUBLIC_API_GOOGLE_IMAGE_HOST_NAME }}
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
           NEXT_PUBLIC_API_PROTOCOL: ${{ secrets.NEXT_PUBLIC_API_PROTOCOL }}
