etc: update env in ci-dev.yaml for test changed api url (#138)

--- a/.github/workflows/ci-dev.yml
+++ b/.github/workflows/ci-dev.yml
@@ -65,8 +65,8 @@ jobs:
           NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
           NEXT_PUBLIC_API_PROTOCOL: ${{ secrets.NEXT_PUBLIC_API_PROTOCOL }}
           NEXT_PUBLIC_API_HOST_NAME: ${{ secrets.NEXT_PUBLIC_API_HOST_NAME }}
-          NEXT_PUBLIC_API_PORT: ''
-          NEXT_PUBLIC_API_PATH_NAME: ${{ secrets.NEXT_PUBLIC_API_PATH_NAME }}
+          NEXT_PUBLIC_API_PORT: 443
+          NEXT_PUBLIC_API_PATH_NAME: ''
           NEXT_PUBLIC_GOOGLE_LOGIN_URL: ${{ secrets.NEXT_PUBLIC_GOOGLE_LOGIN_URL }}
           NEXT_PUBLIC_REDIRECT_BASE_URL: ${{ secrets.NEXT_PUBLIC_REDIRECT_BASE_URL }}
           NEXT_PUBLIC_MIXPANEL_LIVE_TOKEN: ${{ secrets.NEXT_PUBLIC_MIXPANEL_LIVE_TOKEN }}
