[DEV-46] feat: editor panel - UploadPanel (#7)
* feature: design EditorPanel component

* feature: add disabled props to UploadButton in ImageInputBox

* refactor: move ImageInputBox ui and logic into features

* feature: create UploadPanel in widget

* etc: update storybook version

* feature: install shadcn label component

* refactor: update style of Switch component

* feature: add Recent in upload panel

* feature: install shadcn Slider component

* feature: add Transparency in upload panel

* feature: create checkbox component

* feature: create RecentItem of upload panel

* refactor: DndBox

* refactor: EditorPanel

* refactor: update UploadPanel storybook title

* etc: remove RecentItems storybook

* feature: add RecentItems to UploadPanel

* etc: comment code in ImageInputBox of _generate page

* refactor: 불필요한 스타일 분기문 삭제

* refactor: 변수명 수정 (isShow -> isRecentItemsShow)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "prettier": "npx prettier --write ./*"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@sentry/nextjs": "^8",
@@ -41,17 +44,17 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.6.1",
+    "@chromatic-com/storybook": "^3.2.2",
     "@faker-js/faker": "^8.4.1",
     "@mswjs/http-middleware": "^0.10.1",
-    "@storybook/addon-essentials": "^8.2.5",
-    "@storybook/addon-interactions": "^8.2.5",
-    "@storybook/addon-links": "^8.2.5",
-    "@storybook/addon-onboarding": "^8.2.5",
-    "@storybook/blocks": "^8.2.5",
-    "@storybook/nextjs": "^8.2.5",
-    "@storybook/react": "^8.2.5",
-    "@storybook/test": "^8.2.5",
+    "@storybook/addon-essentials": "^8.4.6",
+    "@storybook/addon-interactions": "^8.4.6",
+    "@storybook/addon-links": "^8.4.6",
+    "@storybook/addon-onboarding": "^8.4.6",
+    "@storybook/blocks": "^8.4.6",
+    "@storybook/nextjs": "^8.4.6",
+    "@storybook/react": "^8.4.6",
+    "@storybook/test": "^8.4.6",
     "@svgr/webpack": "^8.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cors": "^2.8.17",
@@ -65,7 +68,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-storybook": "^0.11.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-unicorn": "^54.0.0",
     "express": "^4.19.2",
@@ -75,7 +78,7 @@
     "msw": "^2.3.4",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "storybook": "^8.2.5",
+    "storybook": "^8.4.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
