--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mixpanel-browser": "^2.55.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-color-palette": "^7.3.0",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
     "shadcn-ui": "^0.8.0",
