--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "chromatic": "^11.23.0",
     "cors": "^2.8.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
