Revert "[DEV-82] feat: my account > manage subscription 페이지 마크업 (#40)" (#48)
This reverts commit cc70438bf83bc9df11df080f2bc33b507e65efba.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
   },
   "settings": {
     "tailwindcss": {
-      "callees": ["cn", "cva"] // cn() 안에 있는 클래스명에도 적용
+      "callees": ["cn"] // cn() 안에 있는 클래스명에도 적용
     }
   }
 }
