--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sentry/nextjs": "^8",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.0",
+    "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
