--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ SENTRY_AUTH_TOKEN
 NEXT_PUBLIC_API_GOOGLE_IMAGE_HOST_NAME
 
 NEXT_PUBLIC_API_URL
+NEXT_PUBLIC_AUTH_API_URL
 
 NEXT_PUBLIC_API_PROTOCOL
 NEXT_PUBLIC_API_HOST_NAME
