--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.414.0",
     "mixpanel-browser": "^2.55.1",
     "next": "14.2.5",
@@ -62,6 +63,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.15",
     "@types/mixpanel-browser": "^2.50.1",
     "@types/node": "^20",
     "@types/react": "^18",
