--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "npx prettier --write ./*"
   },
   "dependencies": {
+    "@portone/browser-sdk": "^0.0.11",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
