etc: env.example 수정

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,5 @@ NEXT_PUBLIC_SENTRY_DSN
 # NEXT_PUBLIC_API_URL
 
 NEXT_PUBLIC_STORE_ID
-NEXT_PUBLIC_CHANNEL_KEY_PAYPAL_UK
+NEXT_PUBLIC_CHANNEL_KEY
+NEXT_PUBLIC_CHANNEL_KEY_PAYPAL
