[DEV-94] [DEV-99] feat: checkout & pricing 페이지 마크업 및 일부 기능 (#69)
* feat: pricing 페이지 plan, credit 탭 제작

* feat: pricing 페이지 credit 탭 마크업

* feat: axios interceptor & auth api 엔드포인트 수정

* feat: pricing plan 탭 - 통화 구분 및 타입 구체화

* feat: 비로그인 상태 SubscribeButton 클릭시 로그인 모달창

* feat: payment membership api 연결

* refactor: my account 하위 페이지 레이아웃 수정

* feat: MyAccount 하위 페이지 Layout 수정 및 BackButton 레이아웃에 적용

* feat: my account에 변경된 plan 타입 적용

* feat: checkout 페이지 마크업

* feat: 플랜 구독 모달 continue 버튼에 checkout 페이지 이동 연결

* refactor: OrderSummary 컴포넌트화

* feat: OrderSummary에 선택한 플랜 내용 연결

* feat: checkout 페이지로 이동시 모달 닫기 추가

* [DEV-92] feat: payment - 토스페이먼츠 일반/정기 결제 테스트 (#57)

* etc: 포트원 sdk 설치

* feat: 토스페이먼츠 일반/정기결제 테스트 구현

* feat: 일반결제 OrderInfo 타입 정의

* feat: getBillingKey 에러 타입 추가

* refactor: 임시 에러처리 수정

* feat: PlanItem 스토리북 삭제

* feat: checkout 페이지로 토스페이먼츠 테스트 버튼 이동

* feat: 구독할 때 토스페이먼츠 PayNow 버튼 기능 구현

* feat: 토스페이먼츠 일반 결제 기능 코드 제거

* feat: 업그레이드 플랜 모달에서 차액 & 날짜 관련 임시 코드작성

* feat: pricing plan items에 에러바운더리 임시 추가

* [DEV-93] feat:  payment - 페이팔 일반/정기 결제 테스트 (#59)

* feat: 페이팔 일반/정기결제 테스트 구현

* feat: 페이팔 버튼 스타일 수정

* fix: 오타 수정

* feat: 구독할 때 페이팔 PayNow 버튼 기능 구현 & 일반 결제 버튼 제거

* feat: 오타 수정

* feat: SubscriptionModal 마크업 수정

* feat: credit 타입 정의 & AddCreditsForm 수정

* feat: OrderSummary에 크레딧 마크업 추가 & 통화에 따른 버튼 렌더링

* feat: checkout 페이지 구조 리팩토링 & credit 체크아웃 페이지 마크업

* feat: CreditOrderSummary UI_TEXT 적용

* refactor: PeriodOfUse 컴포넌트 폴더 위치 이동

* feat: UpgradeOrderSummary 마크업

* etc: env.example 수정

* feat: 오타 수정 bakc

* refactor: AddCreditsContinueButton 컴포넌트화

* feat: getPeriodDate 구하는 방식 변경 ms 2 setDate

* etc: 메모 주석 추가

* refactor: tab 쿼리파라미터 값 상수 사용으로 변경

* feat: 불필요한 throw 제거

* feat: getPlanById, getPlanByName 유틸 생성 및 적용

* feat: OrderLabeledMultiDetail 컴포넌트 생성 및 적용

* refactor: getPlanBy~ 유틸 함수에서 훅으로 변경

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ NEXT_PUBLIC_SENTRY_DSN
 
 # NEXT_PUBLIC_API_MOCKING
 # NEXT_PUBLIC_API_URL
+
+NEXT_PUBLIC_STORE_ID
+NEXT_PUBLIC_CHANNEL_KEY
+NEXT_PUBLIC_CHANNEL_KEY_PAYPAL
