--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-color-palette": "^7.3.0",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
+    "react-moveable": "^0.56.0",
     "shadcn-ui": "^0.8.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
