--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.0",
     "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-virtual": "^3.13.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
