--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "konva": "^9.3.18",
     "lodash": "^4.17.21",
     "lucide-react": "^0.414.0",
     "mixpanel-browser": "^2.55.1",
@@ -43,9 +44,11 @@
     "react-color-palette": "^7.3.0",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.0",
+    "react-konva": "^18.2.10",
     "react-moveable": "^0.56.0",
     "shadcn-ui": "^0.8.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-image": "^1.1.1",
     "uuid": "^10.0.0",
     "zustand": "^5.0.1"
   },
